--- a/docker/supervisor.conf
+++ b/docker/supervisor.conf
@@ -20,6 +20,16 @@ command=/usr/sbin/nginx -g 'daemon off;'
 stderr_logfile=/var/log/nginx/error.log
 stdout_logfile=/var/log/nginx/access.log
 
+[program:redis]
+priority=9
+autostart=true
+autorestart=true
+command=/usr/local/bin/redis-server /storage/redis_data/redis.conf
+directory=/storage/redis_data
+user=root
+autostart=false
+stopsignal=QUIT
+
 [program:php8-fpm]
 priority=5
 autostart=true
