--- a/ConfessWebnAPI/Dockerfile
+++ b/ConfessWebnAPI/Dockerfile
@@ -41,7 +41,7 @@ RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
 
 # Copy code to /var/www
-COPY --chown=www:www-data ConfessWebnAPI/ /var/www
+COPY --chown=www:www-data confessionBot/ConfessWebnAPI/ /var/www
 
 # add root to www group
 RUN chmod -R ug+w /var/www/storage
