--- a/ConfessWebnAPI/Dockerfile
+++ b/ConfessWebnAPI/Dockerfile
@@ -25,7 +25,8 @@ RUN apt-get update && apt-get install -y \
     lua-zlib-dev \
     libmemcached-dev \
     nginx \
-    redis
+    redis \
+    git
 
 # Install supervisor
 RUN apt-get install -y supervisor
@@ -41,6 +42,7 @@ RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
 
 # Copy code to /var/www
+RUN git clone https://github.com/arffsaad/confessionBot
 COPY --chown=www:www-data confessionBot/ConfessWebnAPI/ /var/www
 
 # add root to www group
