--- a/ConfessWebnAPI/docker/supervisor.conf
+++ b/ConfessWebnAPI/docker/supervisor.conf
@@ -21,10 +21,10 @@ stderr_logfile=/var/log/nginx/error.log
 stdout_logfile=/var/log/nginx/access.log
 
 [program:redis]
-command=/usr/local/bin/redis-server /storage/redis_data/redis.conf
-directory=/storage/redis_data
+command=/usr/bin/redis-server /etc/redis/redis.conf
+directory=/etc/redis
 user=root
-autostart=false
+autostart=true
 stopsignal=QUIT
 
 [program:php8-fpm]
