--- a/ConfessWebnAPI/Dockerfile
+++ b/ConfessWebnAPI/Dockerfile
@@ -58,7 +58,7 @@ RUN mkdir /var/log/php
 RUN touch /var/log/php/errors.log && chmod 777 /var/log/php/errors.log
 
 # Deployment steps
-RUN cd /var/www && composer install --optimize-autoloader --no-dev
+RUN cd /var/www && composer install --optimize-autoloader
 RUN chmod +x /var/www/docker/run.sh
 
 EXPOSE 80
